--- a/Images/Zero-shot Image Classification.ipynb
+++ b/Images/Zero-shot Image Classification.ipynb
@@ -173,7 +173,7 @@
    },
    "outputs": [],
    "source": [
-    "# NOTE: I am using this to get labels for the images. In the real-world, one does not have this\n",
+    "# NOTE: I am using this to get labels for the images. In the real-world, one does not have this information\n",
     "\n",
     "mil_file_names = ['Armored personnel carriers', 'light utility vehicles', 'Anti-aircraft', 'war_tank', 'artillery', 'tanks', 'Prime movers', 'soldier']"
    ]
@@ -405,7 +405,8 @@
     "Now, having established a quick way to use a zero-shot model to find the images we want, we are now going to engage in [prompt engineering](https://heartbeat.comet.ml/prompt-engineering-ddbbd39d61bb) in order to get better performance form the model. While this is an active area of research, there are a couple of know ways to do prompt engineering with these image-text contrastive models in an unsupervised way:\n",
     "- using more specific prompts (e.g. `[\"military vehicle\", \"soldier\", \"truck\", \"car\", \"boat\", \"motorcycle\", \"bus\"]`)\n",
     "- providing context (e.g. `[\"picture of a military vehicle\",\"picture of a soldier\", \"picture of a truck\", \"picture of a car\", \"picture of a boat\", \n",
-    "\"picture of a motorcycle\", \"sketch of a military vehicle\"]`). As a side note, this idea was one of the ones recommend by [CLIPs](https://arxiv.org/abs/2103.00020) original authors."
+    "\"picture of a motorcycle\", \"sketch of a military vehicle\"]`). As a side note, this idea was one of the ones recommend by [CLIPs](https://arxiv.org/abs/2103.00020) original authors.\n",
+    "- Adding in 'distractor' prompts as has been done with the `\"motorcycle\", \"bus\"` etc. labels. __Note__: this idea has not been fully tested but rather it is something we have noticed in practice"
    ]
   },
   {
@@ -559,7 +560,17 @@
    "metadata": {},
    "source": [
     "# Fine Tuning the Model\n",
-    "Finally, we can also __finetune__ a zero shot model for increased performance for a specific task domain. In this case, since we are using an image-text contrastive model, we need to provide pairs of images and their associated text (i.e. captions) for the model to learn a joint representation of the text and images. Furthermore, we will also be following the advice in [LiT](https://arxiv.org/abs/2111.07991) and only training the project layers and not the image and text encoders. For this, we will be using PyTorch Lightning as base PyTorch data handlers as the means by which we can finetune the HuggingFace model. Thus it should be noted that there are other ways of doing this. Some other examples of training CLIP are available [here](https://sachinruk.github.io/blog/pytorch/pytorch%20lightning/loss%20function/gpu/2021/03/07/CLIP.html), [here](https://colab.research.google.com/github/arampacha/CLIP-rsicd/blob/master/nbs/Finetuning_CLIP_with_HF_and_jax.ipynb), and [here](https://github.com/clip-italian/clip-italian/blob/master/hybrid_clip/run_hybrid_clip.py)."
+    "Finally, we can also __fine tune__ a zero shot model for increased performance for a specific task domain. In this case, since we are using an image-text contrastive model, we need to provide pairs of images and their associated text (i.e. captions) for the model to learn a joint representation of the text and images. Furthermore, we will also be following the advice in [LiT](https://arxiv.org/abs/2111.07991) and only training the project layers and not the image and text encoders. For this, we will be using PyTorch Lightning as base PyTorch data handlers as the means by which we can finetune the HuggingFace model. Thus it should be noted that there are other ways of doing this. Some other examples of training CLIP are available [here](https://sachinruk.github.io/blog/pytorch/pytorch%20lightning/loss%20function/gpu/2021/03/07/CLIP.html), [here](https://colab.research.google.com/github/arampacha/CLIP-rsicd/blob/master/nbs/Finetuning_CLIP_with_HF_and_jax.ipynb), and [here](https://github.com/clip-italian/clip-italian/blob/master/hybrid_clip/run_hybrid_clip.py)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "12df904c-3105-46e2-84c0-76ac0613a9f9",
+   "metadata": {},
+   "source": [
+    "#### Note about Prompt Engineering and Fine tuning\n",
+    "\n",
+    "From the previous section, it should be clear that \"prompt engineering\" presents some distinct advantages when it comes to using zero-shot TVMs. While this still is an active area of research, there are some new and pretty useful methods out there for more sophisticated prompt engineering. Some supervised examples include [CoCoOp](https://openaccess.thecvf.com/content/CVPR2022/html/Zhou_Conditional_Prompt_Learning_for_Vision-Language_Models_CVPR_2022_paper.html), [KgCoOp](https://arxiv.org/abs/2303.13283), [Compositional Soft Prompting](https://arxiv.org/abs/2204.03574), [Learning to name Classes](https://arxiv.org/abs/2304.01830), [R-tuning](https://arxiv.org/abs/2303.051220). These techniques can actually be used in place of fine tuning and can even perform better than some forms of fine tuning (e.g., linear probing)"
    ]
   },
   {
@@ -597,6 +608,15 @@
     "# create a dataset class to handle the data processing, using HuggingFace's CLIP processor, and a collate function\n",
     "\n",
     "class CaptionedImagesDataset(Dataset):\n",
+    "    \"\"\"\n",
+    "    A PyTorch Dataset for loading images with their associated captions.\n",
+    "\n",
+    "    Args:\n",
+    "        dataframe (pandas.DataFrame): A dataframe containing the image paths and captions.\n",
+    "        root_dir (str): The root directory where the images are stored.\n",
+    "        processor (transformers.Processor): A CLIP text-vision processor for encoding the captions and images.\n",
+    "        transform (optional, callable): A callable transform to be applied to the images.\n",
+    "    \"\"\"\n",
     "    def __init__(self, dataframe, root_dir, processor, transform=None):\n",
     "        self.annotations = dataframe\n",
     "        self.root_dir = root_dir\n",
@@ -604,9 +624,24 @@
     "        self.transform = transform\n",
     "        \n",
     "    def __len__(self):\n",
+    "        \"\"\"\n",
+    "        Returns the number of samples in the dataset.\n",
+    "\n",
+    "        Returns:\n",
+    "            int: The number of samples in the dataset.\n",
+    "        \"\"\"\n",
     "        return len(self.annotations)\n",
     "    \n",
     "    def __getitem__(self, index):\n",
+    "        \"\"\"\n",
+    "        Loads the image and caption at the given index.\n",
+    "\n",
+    "        Args:\n",
+    "            index (int): The index of the sample to load.\n",
+    "\n",
+    "        Returns:\n",
+    "            dict: A dictionary containing the encoded caption and image pixel values.\n",
+    "        \"\"\"\n",
     "        img_path = os.path.join(self.root_dir, self.annotations.iloc[index, 0])\n",
     "        text = self.annotations.iloc[index, 1]\n",
     "        image = io.imread(img_path)\n",
@@ -622,6 +657,15 @@
     "        return inputs\n",
     "    \n",
     "def collate_fn(batch):\n",
+    "    \"\"\"\n",
+    "    Collates a batch of samples into a single batch for training a CLIP text-vision model.\n",
+    "\n",
+    "    Args:\n",
+    "        batch (list): A list of samples, where each sample is a dictionary containing the encoded caption and image pixel values.\n",
+    "\n",
+    "    Returns:\n",
+    "        dict: A dictionary containing the collated batch of encoded captions and image pixel values.\n",
+    "    \"\"\"\n",
     "    collated_batch = {\n",
     "        k: [d.get(k) for d in batch]\n",
     "        for k in set().union(*batch)\n",
@@ -721,15 +765,35 @@
    "outputs": [],
    "source": [
     "# Create a Pytorch Lightning Module to handle training. Note that one has to place the data tensors on the training device manually, which you normally do not have to \n",
-    "# do with Lightning\n",
+    "# do with Lightning normally\n",
     "\n",
     "class LightningModel(pl.LightningModule):\n",
+    "    \"\"\"\n",
+    "    Pytorch Lightning Module for fine-tuning the CLIP text-vision model.\n",
+    "\n",
+    "    Args:\n",
+    "    model (CLIP): The pre-trained CLIP model to be fine-tuned.\n",
+    "    lr (float): Learning rate to use for training. Defaults to 3e-5.\n",
+    "\n",
+    "    Returns:\n",
+    "    None\n",
+    "    \"\"\"\n",
     "    def __init__(self, model, lr: float = 3e-5) -> None:\n",
     "        super().__init__()\n",
     "        self.model = model\n",
     "        self.lr = lr\n",
     "\n",
     "    def training_step(self, batch, batch_idx):\n",
+    "        \"\"\"\n",
+    "        Runs a single training step on a batch of data.\n",
+    "\n",
+    "        Args:\n",
+    "        batch (dict): A dictionary of tensors containing the inputs and labels for the current training batch.\n",
+    "        batch_idx (int): The index of the current batch.\n",
+    "\n",
+    "        Returns:\n",
+    "        float: The training loss for the current batch.\n",
+    "        \"\"\"\n",
     "        outputs = self.model(\n",
     "            input_ids=batch['input_ids'].to('cuda'),\n",
     "            attention_mask=batch['attention_mask'].to('cuda'),\n",
@@ -740,6 +804,16 @@
     "        return outputs.loss\n",
     "\n",
     "    def validation_step(self, batch, batch_idx):\n",
+    "        \"\"\"\n",
+    "        Runs a single validation step on a batch of data.\n",
+    "\n",
+    "        Args:\n",
+    "        batch (dict): A dictionary of tensors containing the inputs and labels for the current validation batch.\n",
+    "        batch_idx (int): The index of the current batch.\n",
+    "\n",
+    "        Returns:\n",
+    "        float: The validation loss for the current batch.\n",
+    "        \"\"\"\n",
     "        outputs = self.model(\n",
     "            input_ids=batch['input_ids'].to('cuda'),\n",
     "            attention_mask=batch['attention_mask'].to('cuda'),\n",
@@ -750,8 +824,17 @@
     "        return outputs.loss\n",
     "\n",
     "    def configure_optimizers(self) -> torch.optim.Optimizer:\n",
+    "        \"\"\"\n",
+    "        Configures the optimizer to be used during training.\n",
+    "\n",
+    "        Args:\n",
+    "        None\n",
+    "\n",
+    "        Returns:\n",
+    "        torch.optim.Optimizer: The optimizer to be used during training.\n",
+    "        \"\"\"\n",
     "        vision_params = {\"params\": self.model.visual_projection.parameters(), \"lr\": self.lr}\n",
-    "        caption_params = {\"params\": model.text_projection.parameters() , \"lr\": self.lr}\n",
+    "        caption_params = {\"params\": self.model.text_projection.parameters() , \"lr\": self.lr}\n",
     "        return torch.optim.Adam([vision_params, caption_params])"
    ]
   },
@@ -914,7 +997,7 @@
    "id": "1cc48b09-2c8f-48a0-a211-9015cfa556ad",
    "metadata": {},
    "source": [
-    "# Use a Finetuned Model\n",
+    "# Use a Fine tuned Model\n",
     "Now, having trained a model to be better for our specific task, we can use that model in the same pipeline set up as before"
    ]
   },
