Update to include data sets

--- a/Text/12JUN23_MORSS_Text.ipynb
+++ b/Text/12JUN23_MORSS_Text.ipynb
@@ -306,7 +306,7 @@
    "id": "d3b4e5df-bea6-483c-8c92-bd2f89c14409",
    "metadata": {},
    "source": [
-    "... Else just read in previously scraped data"
+    "... Else just read in previously scraped data. For the U.S. Army Recruitment video, a previous scrape can be found at [this Google Drive](https://drive.google.com/file/d/1vkZo7pyQllgrDZURC8_ZhYPKVAeyhqxh/view?usp=drive_link)"
    ]
   },
   {
