Minor updates to Notebooks for Data Labeling

--- a/Data Labeling/04DEC24_MORS ETF_LLM.ipynb
+++ b/Data Labeling/04DEC24_MORS ETF_LLM.ipynb
@@ -25,7 +25,25 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-12-03 17:44:21.931836: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2024-12-03 17:44:23.459464: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:485] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2024-12-03 17:44:23.856477: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:8454] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "2024-12-03 17:44:23.955539: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1452] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2024-12-03 17:44:24.900541: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 AVX512F AVX512_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2024-12-03 17:44:37.055368: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n",
+      "/usr/local/lib/python3.10/dist-packages/torchvision/datapoints/__init__.py:12: UserWarning: The torchvision.datapoints and torchvision.transforms.v2 namespaces are still Beta. While we do not expect major breaking changes, some APIs may still change according to user feedback. Please submit any feedback you may have in this issue: https://github.com/pytorch/vision/issues/6753, and you can also check out https://github.com/pytorch/vision/issues/7319 to learn more about the APIs that we suspect might involve future changes. You can silence this warning by calling torchvision.disable_beta_transforms_warning().\n",
+      "  warnings.warn(_BETA_TRANSFORMS_WARNING)\n",
+      "/usr/local/lib/python3.10/dist-packages/torchvision/transforms/v2/__init__.py:54: UserWarning: The torchvision.datapoints and torchvision.transforms.v2 namespaces are still Beta. While we do not expect major breaking changes, some APIs may still change according to user feedback. Please submit any feedback you may have in this issue: https://github.com/pytorch/vision/issues/6753, and you can also check out https://github.com/pytorch/vision/issues/7319 to learn more about the APIs that we suspect might involve future changes. You can silence this warning by calling torchvision.disable_beta_transforms_warning().\n",
+      "  warnings.warn(_BETA_TRANSFORMS_WARNING)\n"
+     ]
+    }
+   ],
    "source": [
     "# Import packages for labeling data by LLM\n",
     "import pandas as pd  \n",
@@ -416,13 +434,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c76906251d374757bc0885a0d85da82f",
+       "model_id": "87818eec540142ddb0fa5291c5d04e47",
        "version_major": 2,
        "version_minor": 0
       },
@@ -439,7 +457,7 @@
     "hf_pipeline = pipeline(\n",
     "    \"text2text-generation\",\n",
     "    model=\"declare-lab/flan-alpaca-gpt4-xl\",\n",
-    "    device=-1,  # Use CPU (-1 for CPU, other numbers for GPUs)\n",
+    "    device=0,  # (-1 for CPU, other numbers for GPUs)\n",
     "    max_new_tokens = 100,\n",
     ")\n",
     "\n",
@@ -449,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -464,14 +482,14 @@
     "# run some examples \n",
     "question = '''Analyze the following social media post and determine its stance towards the provided entity. Respond with a single word: \"for\", \"against\", \"neutral\", or \"unrelated\". Only return the stance as a single word, and no other text.\n",
     "entity: U.S. Army\n",
-    "post: @vondeveen If the Army wants to actually recruit people, maybe stop breaking people and actually prosecute sexual assualt #nomorewar.\n",
+    "post: @vondeveen If the Army wants to actually recruit people, maybe stop breaking people and actually prosecute sexual assault #nomorewar.\n",
     "stance:'''\n",
     "print(llm.invoke(question))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -492,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -535,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -579,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -588,7 +606,7 @@
        "'for'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -601,15 +619,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Classifying rows:  73%|███████▎  | 732/1000 [28:56<11:51,  2.66s/it]Token indices sequence length is longer than the specified maximum sequence length for this model (593 > 512). Running this sequence through the model will result in indexing errors\n",
-      "Classifying rows: 100%|██████████| 1000/1000 [40:02<00:00,  2.40s/it]\n"
+      "Classifying rows:   1%|          | 6/1000 [00:00<02:03,  8.06it/s]You seem to be using the pipelines sequentially on GPU. In order to maximize efficiency please use a dataset\n",
+      "Classifying rows:  73%|███████▎  | 732/1000 [01:32<00:36,  7.44it/s]Token indices sequence length is longer than the specified maximum sequence length for this model (593 > 512). Running this sequence through the model will result in indexing errors\n",
+      "Classifying rows: 100%|██████████| 1000/1000 [02:06<00:00,  7.89it/s]\n"
      ]
     }
    ],
@@ -629,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -641,7 +660,7 @@
        " array([  1,   1, 409, 352, 139,  98]))"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -659,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -708,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -717,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -727,7 +746,7 @@
        " array([409, 353, 140,  98]))"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -738,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -770,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -814,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -839,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -898,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -907,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -916,7 +935,7 @@
        "'for'"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -925,6 +944,66 @@
     "few_shot_chain.invoke({\"title\":example['name'], \n",
     "                  \"entity\":\"the U.S. Army\",\n",
     "                  \"comment\":example['comment']})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Classifying rows: 100%|██████████| 1000/1000 [02:54<00:00,  5.73it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# now, lets programmatically produce labels with few-shot prompting\n",
+    "\n",
+    "results = []\n",
+    "\n",
+    "for _, row in tqdm(df.iterrows(), total=len(df), desc=\"Classifying rows\"):\n",
+    "    result = few_shot_chain.invoke({\n",
+    "        \"title\": row['name'],\n",
+    "        \"entity\": \"the U.S. Army\",\n",
+    "        \"comment\": row['comment']\n",
+    "    })\n",
+    "    results.append(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array(['against', 'for', 'neutral', 'unrelated'], dtype='<U9'),\n",
+       " array([412, 359,  73, 156]))"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.unique(results, return_counts=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Now, lets save out our labels for later use\n",
+    "df['llm_few_shot_labels'] = results\n",
+    "\n",
+    "df.to_csv(\"@usarmy_comments_validation_set_labeled.csv\")"
    ]
   },
   {
@@ -938,7 +1017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -960,7 +1039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -969,7 +1048,7 @@
        "'The comment expresses an opinion about the U.S. Army. The user expresses a positive sentiment towards the video and its content. This indicates that the user has a positive view of the U.S. Army and its activities.'"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -982,7 +1061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1004,7 +1083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1020,7 +1099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1029,7 +1108,7 @@
        "'for'"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1042,6 +1121,66 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Classifying rows: 100%|██████████| 1000/1000 [51:52<00:00,  3.11s/it] \n"
+     ]
+    }
+   ],
+   "source": [
+    "# now, lets programmatically produce labels with few-shot prompting\n",
+    "\n",
+    "results = []\n",
+    "\n",
+    "for _, row in tqdm(df.iterrows(), total=len(df), desc=\"Classifying rows\"):\n",
+    "    result = cot_chain.invoke({\n",
+    "        \"title\": row['name'],\n",
+    "        \"entity\": \"the U.S. Army\",\n",
+    "        \"comment\": row['comment']\n",
+    "    })\n",
+    "    results.append(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array(['against', 'for', 'neutral', 'unrelated'], dtype='<U9'),\n",
+       " array([466, 487,  42,   5]))"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.unique(results, return_counts=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Now, lets save out our labels for later use\n",
+    "df['llm_cot_labels'] = results\n",
+    "\n",
+    "df.to_csv(\"@usarmy_comments_validation_set_labeled.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -1050,7 +1189,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1064,9 +1203,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
